--- a/src/components/features/AnimeDetails/AnimeTrailer/AnimeTrailer.module.scss
+++ b/src/components/features/AnimeDetails/AnimeTrailer/AnimeTrailer.module.scss
@@ -9,7 +9,7 @@
   }
 
   & .trailer {
-    border-radius: 10px;
+    border-radius: 5px;
     min-height: 250px;
   }
 
